# scp-machine

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  SC-KPM.pro  identification.c  identification.h  main.c  main.cpp  question.c  question.h  sc_iterator5.c  sc_iterator5.h  search.c  search.h  search_operations.c  search_operations.h  system.c  system.h  system_pattern.cpp  system_pattern.h  system_pattern_old.c  system_pattern_old.h  temp.txt  test.ini
sc_garbage_collector/: Makefile  sc_garbage_collector.c  sc_garbage_collector.h  sc_garbage_collector.pro  sc_garbage_collector_functions.c  sc_garbage_collector_functions.h  sc_garbage_collector_operations.c  sc_garbage_collector_operations.h
sc_kpm_additional/: Makefile  sc_kpm_additional.c  sc_kpm_additional.h  sc_kpm_additional.pro
sc_search_basic/: Makefile  question_keynodes.scs  sc_search_basic.c  sc_search_basic.h  sc_search_basic.pro  (+4 more)
scp_interpreter/: CMakeLists.txt  scp_interpreter.pro
scp_interpreter/src/: scp_interpreter.c  scp_interpreter.h  scp_interpreter_utils.c  scp_interpreter_utils.h  scp_keynodes.c  scp_keynodes.h  scp_operator_interpreter_agents.c  scp_operator_interpreter_agents.h  scp_operator_interpreter_functions.c  scp_operator_interpreter_functions.h  scp_operator_keynodes.c  scp_operator_keynodes.h  scp_operator_syncronizer.c  scp_operators_copiers.c  scp_operators_copiers.h  scp_procedure_preprocessor.c  scp_procedure_verifier.c  scp_process_creator.c  scp_process_destroyer.c
scp_interpreter/test/: main.c  scp_interpreter_test.pro
test/: main.c
(+140 files in other folders)
